src/tests/snapshots/mill__tests__ir__addition.snap
---
source: src/tests/ir.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "main"
target triple = "x86_64-unknown-linux-gnu"

define void @main() {
main:
  ret i64 3
}

