src/tests/snapshots/mill__tests__ir__alloc_struct.snap
---
source: src/tests/ir.rs
expression: ir

---
; ModuleID = 'main'
source_filename = "main"

define i64 @main() {
main:
  %a = alloca { i64, i64 }
}

