src/tests/snapshots/mill__tests__ir__assignment.snap
---
source: src/tests/ir.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "main"
target triple = "x86_64-unknown-linux-gnu"

define void @main() {
main:
  %a = alloca i64, align 8
  store i64 1, i64* %a, align 4
  %b = alloca i64, align 8
  store i64 2, i64* %b, align 4
}

